# Simple_SocketCAN_interface

./: .gitignore  CMakeLists.txt  README.md  can_test.py
include/: CanDevice.h  CanDeviceFactory.h  IsoTpCanDevice.h  RawCanDevice.h
src/: CanDevice.cpp  CanDeviceFactory.cpp  IsoTpCanDevice.cpp  RawCanDevice.cpp  main.cpp
